--- a/lab_03/zad_01/src/app/header/header.component.scss
+++ b/lab_03/zad_01/src/app/header/header.component.scss
@@ -1,44 +1,21 @@
-$primary-color: #3498db;
-$header-background: #333;
-$header-text-color: #fff;
 
 
-
-
-
-  nav {
-    background-color: $header-background;
-    color: $header-text-color;
-    padding: 20px 15px;
+header {
     display: flex;
+    flex-direction: row;
+    background-color: #333; 
     justify-content: space-between;
     align-items: center;
-
+    color: #fff; 
+    padding: 10px;
+    
     .logo {
       a {
         text-decoration: none;
-        color: $header-text-color;
-        font-size: 24px;
-        font-weight: bold;
-      }
+        color: #fff;
+        font-size: 1.5rem; 
+        font-weight: bold; 
     }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      gap: 20px;
-
-      li {
-        a {
-          text-decoration: none;
-          color: $header-text-color;
-          &:hover {
-            color: $primary-color;
-          }
-        }
-      }
     }
   }
-
+  
