--- a/lab_04/zad_01/src/app/counter/counter.component.html
+++ b/lab_04/zad_01/src/app/counter/counter.component.html
@@ -1,4 +1,4 @@
-<p>{{counter }}</p>
+<app-counter-display [counter]="counter" ></app-counter-display>
 <button (click)="decrement()">-</button>  
 <button (click)="increment()">+</button>
 <button (click)="reset()">reset</button>
