--- a/zadanie_projektowe_02/src/app/person-form/person-form.component.html
+++ b/zadanie_projektowe_02/src/app/person-form/person-form.component.html
@@ -1,4 +1,9 @@
-<form #personForm="ngForm" >
+<form #personForm="ngForm" (ngSubmit)="onSubmit()" class="bg-light p-4 rounded border border-black" >
+    <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="missing">
+        <label class="form-check-label" for="missing" [(ngModel)]="person.stillMissing">Still missing</label>
+      </div>
+
     <div class="form-group">
         <label> Name:</label>
         <input type="text" class="form-control" [(ngModel)]="person.name" name="name">
@@ -20,13 +25,25 @@
     <div class="form-group">
         <label> Gender:</label>
         <select class="form-control" [(ngModel)]="person.gender" name="gender">
-            <!-- <option *ngFor="let genderOption of genderOptions" [ngValue]="genderOption">
-              {{ genderOption }}
-            </option> -->
             <option ngValue="[Gender.FEMALE]">Female</option>
             <option ngValue="[Gender.MALE]">Male</option>
           </select>
         
     </div>
+
+    <div class="form-group">
+        <label> City:</label>
+        <input type="text" class="form-control" [(ngModel)]="person.city" name="city">
+        
+    </div>
+
+    <div class="form-group">
+        <label> Last time seen:</label>
+        <input type="date" class="form-control" [(ngModel)]="person.lastTimeSeen" name="lastTimeSeen">
+        
+    </div>
+
+   
+<button type="submit" class="btn btn-primary bt-3" >Add</button>
 </form>
 
