--- a/zadanie_projektowe_02/src/app/person-details/person-details.component.html
+++ b/zadanie_projektowe_02/src/app/person-details/person-details.component.html
@@ -1,1 +1,9 @@
-<p>person-details works!</p>
+<div class="container p-3 mb-3 bg-beige border rounded">
+<p class="mb-2 mt-2">Still missing: {{person.stillMissing}}</p>
+<p class="mb-2 mt-2">Name: {{person.name}}</p>
+<p class="mb-2 mt-2">Surname: {{person.surname}}</p>
+<p class="mb-2 mt-2">Age: {{person.age}} </p>
+<p class="mb-2 mt-2">Gender: {{person.gender}}</p>
+<p class="mb-2 mt-2">City: {{person.city}}</p>
+<p class="mb-2 mt-2">Last time seen: {{person.lastTimeSeen}}</p>
+</div>
