--- a/zadanie_projektowe_02/src/app/person-form/person-form.component.html
+++ b/zadanie_projektowe_02/src/app/person-form/person-form.component.html
@@ -1,29 +1,29 @@
 <form #personForm="ngForm" (ngSubmit)="onSubmit()" class="bg-light p-4 rounded border border-black" >
     <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="missing">
-        <label class="form-check-label" for="missing" [(ngModel)]="person.stillMissing">Still missing</label>
+        <input type="checkbox" class="form-check-input" [(ngModel)]="person.stillMissing" name="missing">
+        <label class="form-check-label" for="missing">Still missing</label>
       </div>
 
     <div class="form-group">
-        <label> Name:</label>
+        <label for="name"> Name:</label>
         <input type="text" class="form-control" [(ngModel)]="person.name" name="name">
         
     </div>
 
     <div class="form-group">
-        <label> Surname:</label>
+        <label  for="surname"> Surname:</label>
         <input type="text" class="form-control" [(ngModel)]="person.surname" name="surname">
         
     </div>
 
     <div class="form-group">
-        <label> Age:</label>
+        <label for="age"> Age:</label>
         <input type="number" class="form-control" [(ngModel)]="person.age" name="age">
         
     </div>
 
     <div class="form-group">
-        <label> Gender:</label>
+        <label for="gender"> Gender:</label>
         <select class="form-control" [(ngModel)]="person.gender" name="gender">
             <option ngValue="[Gender.FEMALE]">Female</option>
             <option ngValue="[Gender.MALE]">Male</option>
@@ -32,13 +32,13 @@
     </div>
 
     <div class="form-group">
-        <label> City:</label>
+        <label for="city"> City:</label>
         <input type="text" class="form-control" [(ngModel)]="person.city" name="city">
         
     </div>
 
     <div class="form-group">
-        <label> Last time seen:</label>
+        <label for="lastTimeSeen"> Last time seen:</label>
         <input type="date" class="form-control" [(ngModel)]="person.lastTimeSeen" name="lastTimeSeen">
         
     </div>
