--- a/zadanie_projektowe_02/src/app/person-form/person-form.component.html
+++ b/zadanie_projektowe_02/src/app/person-form/person-form.component.html
@@ -39,7 +39,7 @@
 
     <div class="form-group">
         <label for="lastTimeSeen"> Last time seen:</label>
-        <input type="date" class="form-control" [(ngModel)]="person.lastTimeSeen" name="lastTimeSeen">
+        <input type="datetime-local" class="form-control" [(ngModel)]="person.lastTimeSeen" name="lastTimeSeen">
         
     </div>
 
