--- a/zadanie_projektowe_02/src/app/person-list/person-list.component.html
+++ b/zadanie_projektowe_02/src/app/person-list/person-list.component.html
@@ -2,7 +2,9 @@
 <app-person-form (addPerson)="handleAddPerson($event)"></app-person-form>
 <div class="container">
     <ul class="list-unstyled pl-2">
-        <li *ngFor="let person of arrayOfPeople">
+        <button *ngIf="showOnlyMissing" class="btn btn-warning" (click)="toggleShowOnlyMissing()">Show All People</button>
+        <button *ngIf="!showOnlyMissing" class="btn btn-warning" (click)="toggleShowOnlyMissing()">Show Only Missing People</button>
+        <li *ngFor="let person of arrayOfPeople | filterMissingPeople: showOnlyMissing ">
             <app-person-details  [person]="person"></app-person-details>
         </li>
     </ul>
