--- a/zadanie_projektowe_02/src/app/person-details/person-details.component.html
+++ b/zadanie_projektowe_02/src/app/person-details/person-details.component.html
@@ -1,4 +1,9 @@
+<!-- eslint-disable @angular-eslint/template/elements-content -->
+
 <div class="container p-3 mb-3 bg-beige border rounded">
+ 
+<button (click)="openModal()"><i class="bi bi-trash"></i></button>
+
 <p class="mb-2 mt-2">Still missing: {{person.stillMissing}}</p>
 <p class="mb-2 mt-2">Name: {{person.name}}</p>
 <p class="mb-2 mt-2">Surname: {{person.surname}}</p>
@@ -7,3 +12,24 @@
 <p class="mb-2 mt-2">City: {{person.city}}</p>
 <p class="mb-2 mt-2">Last time seen: {{person.lastTimeSeen |  date:'medium' }}</p>
 </div>
+
+
+<div class="modal" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+        <div class="modal-header">
+          <h4 class="modal-title">Modal Heading</h4>
+          <button (click)="closeModal()" type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          Modal body..
+        </div>
+        <div class="modal-footer">
+          <button (click)="closeModal()" type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+        </div>
+  
+      </div>
+    </div>
+  </div>
+  
