modal with overlay

--- a/zadanie_projektowe_02/src/app/person-details/person-details.component.html
+++ b/zadanie_projektowe_02/src/app/person-details/person-details.component.html
@@ -2,7 +2,7 @@
 
 <div class="container p-3 mb-3 bg-beige border rounded">
  
-<button (click)="openModal()"><i class="bi bi-trash"></i></button>
+<button  data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-trash"></i></button>
 
 <p class="mb-2 mt-2">Still missing: {{person.stillMissing}}</p>
 <p class="mb-2 mt-2">Name: {{person.name}}</p>
