--- a/zadanie_projektowe_02/src/app/person-details/person-details.component.html
+++ b/zadanie_projektowe_02/src/app/person-details/person-details.component.html
@@ -1,8 +1,7 @@
 <!-- eslint-disable @angular-eslint/template/elements-content -->
 
 <div class="container p-3 mb-3 bg-beige border rounded">
- 
-<button  data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-trash"></i></button>
+    <button data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-trash"></i></button>
 
 <p class="mb-2 mt-2">Still missing: {{person.stillMissing}}</p>
 <p class="mb-2 mt-2">Name: {{person.name}}</p>
@@ -19,14 +18,15 @@
       <div class="modal-content">
   
         <div class="modal-header">
-          <h4 class="modal-title">Modal Heading</h4>
+          <h4 class="modal-title">Delete</h4>
           <button (click)="closeModal()" type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body">
-          Modal body..
+          Are you sure that you want to delete this record?
         </div>
         <div class="modal-footer">
           <button (click)="closeModal()" type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+          <button (click)="deleteRecord(person)" type="button" class="btn btn-success" data-bs-dismiss="modal">Delete</button>
         </div>
   
       </div>
