--- a/zadanie_projektowe_02/src/app/person-details/person-details.component.html
+++ b/zadanie_projektowe_02/src/app/person-details/person-details.component.html
@@ -1,35 +1,22 @@
-<!-- eslint-disable @angular-eslint/template/elements-content -->
 
 <div class="container p-3 mb-3 bg-beige border rounded">
-    <button data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-trash"></i></button>
+    <button (click)="handeDelete()"><i class="bi bi-trash"></i></button>
+    <app-modal
+      *ngIf="showModal"
+      [title]="'Delete'"
+      [body]="'Are you sure you want to delete this record?'"
+      [showModal]="showModal"
+      (confirm)="handleConfirm($event)"
+      (closeM)="handleClose()"
 
-<p class="mb-2 mt-2">Still missing: {{person.stillMissing}}</p>
-<p class="mb-2 mt-2">Name: {{person.name}}</p>
-<p class="mb-2 mt-2">Surname: {{person.surname}}</p>
-<p class="mb-2 mt-2">Age: {{person.age}} </p>
-<p class="mb-2 mt-2">Gender: {{ getGenderString(person.gender) }}</p>
-<p class="mb-2 mt-2">City: {{person.city}}</p>
-<p class="mb-2 mt-2">Last time seen: {{person.lastTimeSeen |  date:'medium' }}</p>
-</div>
-
-
-<div class="modal" id="myModal">
-    <div class="modal-dialog">
-      <div class="modal-content">
+    ></app-modal>
   
-        <div class="modal-header">
-          <h4 class="modal-title">Delete</h4>
-          <button (click)="closeModal()" type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body">
-          Are you sure that you want to delete this record?
-        </div>
-        <div class="modal-footer">
-          <button (click)="closeModal()" type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-          <button (click)="deleteRecord(person)" type="button" class="btn btn-success" data-bs-dismiss="modal">Delete</button>
-        </div>
-  
-      </div>
-    </div>
+    <p class="mb-2 mt-2">Still missing: {{ person.stillMissing }}</p>
+    <p class="mb-2 mt-2">Name: {{ person.name }}</p>
+    <p class="mb-2 mt-2">Surname: {{ person.surname }}</p>
+    <p class="mb-2 mt-2">Age: {{ person.age }} </p>
+    <p class="mb-2 mt-2">Gender: {{ getGenderString(person.gender) }}</p>
+    <p class="mb-2 mt-2">City: {{ person.city }}</p>
+    <p class="mb-2 mt-2">Last time seen: {{ person.lastTimeSeen | date: 'medium' }}</p>
   </div>
   
