--- a/lab_10/zad_01/src/app/user-form/user-form.component.html
+++ b/lab_10/zad_01/src/app/user-form/user-form.component.html
@@ -6,8 +6,15 @@
     <label for="email">Email: </label>
     <input id="email" type="text" formControlName="email">
 
-    <label for="address">Address: </label>
-    <input id="address" type="text" formControlName="address">
-
-
+    <div *ngIf="addressesControls">
+        <div formArrayName="addresses">
+            <div *ngFor="let address of addressesControls.controls; let i = index">
+                <label for="address{{ i }}">Address {{ i + 1 }}:</label>
+                <input id="address{{ i }}" type="text" [formControlName]="i">
+                
+            </div>
+        </div>
+    </div>
+        <button type="button" (click)="addAddress()">Add Address</button>
+        <button type="submit" [disabled]="userForm.invalid">Submit</button>
 </form>
