general update of repo

--- a/lab_04/zad_01_counter/src/app/counter/counter.component.html
+++ b/lab_04/zad_01_counter/src/app/counter/counter.component.html
@@ -1,4 +1,4 @@
-<div>Counter: {{currentCount }}</div>
+<app-display-counter [currentCount]="currentCount" ></app-display-counter>
 <button (click)="incrementCounter()">Start</button>
 <button (click)="stopCounter()">Stop</button>
 <button (click)="resetCounter()">Reset</button>
