--- a/lab_04/zad_02_shopping_list/src/app/shopping-list/shopping-list.component.html
+++ b/lab_04/zad_02_shopping_list/src/app/shopping-list/shopping-list.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <ul class="list-group custom-width-list" *ngFor="let item of list">
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        <div>
-          {{ item.name }} {{item.bought}}
+      <li class="list-group-item d-flex justify-content-between align-items-center " >
+        <div [ngClass]="{'bought-item': item.bought}">
+          {{ item.name }} 
         </div>
         <input type="checkbox" [(ngModel)]="item.bought" class="form-check-input">
       </li>
