--- a/lab_04/zad_02_shopping_list/src/app/modal/modal.component.html
+++ b/lab_04/zad_02_shopping_list/src/app/modal/modal.component.html
@@ -1,16 +1,11 @@
-<div class="modal fade" tabindex="-1" role="dialog" [ngClass]="{'show': isOpen}" (click)="closeModal()">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">{{ modalTitle }}</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="closeModal()">
-            <span aria-hidden="true">&times;</span>
-          </button>
+<div *ngIf="isOpen" class="modal-container">
+    <div class="modal-content">
+        <span class="close-btn" (click)="closeModal()">&times;</span>
+        <h3>{{modalTitle}}</h3>
+        <p>{{modalContent}}</p>
+        <div class="btn-container">
+            <button class="btn btn-primary" (click)="closeModal()">Close</button>
+            <button class="btn btn-danger" (click)="confirmDelete()">Delete</button>
         </div>
-        <div class="modal-body">
-            {{modalContent}}
-        </div>
-      </div>
     </div>
-  </div>
-  
+</div>
