--- a/lab_04/zad_02_shopping_list/src/app/shopping-list/shopping-list.component.html
+++ b/lab_04/zad_02_shopping_list/src/app/shopping-list/shopping-list.component.html
@@ -1,11 +1,15 @@
 <div class="container">
     <ul class="list-group custom-width-list" *ngFor="let item of list">
-      <li class="list-group-item d-flex justify-content-between align-items-center " >
-        <div [ngClass]="{'bought-item': item.bought}">
-          {{ item.name }} 
-        </div>
-        <input type="checkbox" [(ngModel)]="item.bought" class="form-check-input">
-      </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center ">
+            <div [ngClass]="{'bought-item': item.bought}">
+                {{ item.name }} 
+            </div>
+            <input type="checkbox" [(ngModel)]="item.bought" class="form-check-input">
+            <button class="btn btn-danger" (click)="deleteItem(item)">Delete</button>
+          
+        </li>
     </ul>
-    
-  </div>
+    <app-modal [modalTitle]="modalTitle" [modalContent]='modalContent' [isOpen]="isOpen"   (deleteConfirmed)="deleteConfirmed($event)"></app-modal>
+    <!-- modal is outside of the loop -->
+  
+</div>
