--- a/lab_04/zad_02_shopping_list/src/app/shopping-list/shopping-list.component.html
+++ b/lab_04/zad_02_shopping_list/src/app/shopping-list/shopping-list.component.html
@@ -1,15 +1,36 @@
 <div class="container">
-    <ul class="list-group custom-width-list" *ngFor="let item of list">
-        <li class="list-group-item d-flex justify-content-between align-items-center ">
-            <div [ngClass]="{'bought-item': item.bought}">
-                {{ item.name }} 
+    <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+            <h1>Shopping list</h1>
+
+            <div>
+                <label for="itemName">Name:</label>
+                <input type="text" id="itemName" class="form-control" [(ngModel)]="newItem.name">
+
+                <label for="itemQuantity">Quantity:</label>
+                <input type="number" id="itemQuantity" class="form-control" [(ngModel)]="newItem.quantity">
+
+                <input type="button" class="btn btn-primary" value="Add" (click)="addItem()">
             </div>
-            <input type="checkbox" [(ngModel)]="item.bought" class="form-check-input">
-            <button class="btn btn-danger" (click)="deleteItem(item)">Delete</button>
-          
-        </li>
-    </ul>
-    <app-modal [modalTitle]="modalTitle" [modalContent]='modalContent' [isOpen]="isOpen"   (deleteConfirmed)="deleteConfirmed($event)"></app-modal>
-    <!-- modal is outside of the loop -->
-  
+        </div>
+    </div>
+
+    <div class="row mt-4">
+        <div class="col-md-12">
+            <ul class="list-group custom-width-list" *ngFor="let item of list">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <div [ngClass]="{'bought-item': item.bought}">
+                        {{ item.name }}
+                    </div>
+                    <div class="d-flex align-items-center gap-5">
+                    <input type="checkbox" [(ngModel)]="item.bought" class="form-check-input">
+                    <button class="btn btn-danger" (click)="deleteItem(item)">Delete</button>
+                </div>
+                </li>
+            </ul>
+            <app-modal [modalTitle]="modalTitle" [modalContent]='modalContent' [isOpen]="isOpen"
+                (deleteConfirmed)="deleteConfirmed($event)"></app-modal>
+            <!-- modal is outside of the loop -->
+        </div>
+    </div>
 </div>
