refactor code, add comments

--- a/lab_04/zad_02_shopping_list/src/app/shopping-list/shopping-list.component.html
+++ b/lab_04/zad_02_shopping_list/src/app/shopping-list/shopping-list.component.html
@@ -16,6 +16,7 @@
     </div>
 
     <div class="row mt-4">
+        <button class="btn btn-danger" (click)="removeBoughtItems()">Delete all bought items</button>
         <div class="col-md-12">
             <ul class="list-group custom-width-list" *ngFor="let item of list">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
