added styling to disabled button

--- a/lab_04/zad_02_shopping_list/src/app/shopping-list/shopping-list.component.scss
+++ b/lab_04/zad_02_shopping_list/src/app/shopping-list/shopping-list.component.scss
@@ -8,3 +8,18 @@
     margin: auto; 
 
   }
+
+  .btn-disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+    background-color: #dc3545; 
+    border-color: #dc3545; 
+    color: #fff; 
+    border-radius: 0.2rem;
+  }
+  
+.btn-delete-all{
+    color: #fff;
+    border: none;
+}
+
