--- a/lab_04/zad_02_shopping_list/src/app/shopping-list/shopping-list.component.html
+++ b/lab_04/zad_02_shopping_list/src/app/shopping-list/shopping-list.component.html
@@ -2,21 +2,14 @@
     <div class="row justify-content-center">
         <div class="col-md-6 text-center">
             <h1>Shopping list</h1>
+            <app-item-form (itemAdded)="addItem($event)"></app-item-form>
 
-            <div>
-                <label for="itemName">Name:</label>
-                <input type="text" id="itemName" class="form-control" [(ngModel)]="newItem.name">
-
-                <label for="itemQuantity">Quantity:</label>
-                <input type="number" id="itemQuantity" class="form-control" [(ngModel)]="newItem.quantity">
-
-                <input type="button" class="btn btn-primary" value="Add" (click)="addItem()">
-            </div>
         </div>
     </div>
 
     <div class="row mt-4">
-<button class="mb-2" [ngClass]="{'btn btn-danger': !isDisabled, ' btn-disabled disabled':isDisabled}" (click)="removeBoughtItems()">Delete all bought items</button>
+        <button class="mb-2" [ngClass]="{'btn btn-danger': !isDisabled, ' btn-disabled disabled':isDisabled}"
+            (click)="removeBoughtItems()">Delete all bought items</button>
 
         <div class="col-md-12">
             <ul class="list-group custom-width-list" *ngFor="let item of list">
@@ -25,14 +18,15 @@
                         {{ item.name }}
                     </div>
                     <div class="d-flex align-items-center gap-5">
-                    <input type="checkbox" [(ngModel)]="item.bought" class="form-check-input">
-                    <button class="btn btn-danger" (click)="deleteItem(item)">Delete</button>
-                </div>
+                        <input type="checkbox" [(ngModel)]="item.bought" class="form-check-input">
+                        <button class="btn btn-danger" (click)="deleteItem(item)">Delete</button>
+                    </div>
                 </li>
             </ul>
             <app-modal [modalTitle]="modalTitle" [modalContent]='modalContent' [isOpen]="isOpen"
                 (deleteConfirmed)="deleteConfirmed($event)"></app-modal>
-                <app-alert [isAlertOpen]="isAlertOpen" (closeAlert)="closeAlert()" [alertMessage]="alertMessage"></app-alert>
+            <app-alert [isAlertOpen]="isAlertOpen" (closeAlert)="closeAlert()"
+                [alertMessage]="alertMessage"></app-alert>
             <!-- modal is outside of the loop -->
         </div>
     </div>
