--- a/lab_11/zad_02/src/app/status/status.component.html
+++ b/lab_11/zad_02/src/app/status/status.component.html
@@ -1,1 +1,4 @@
-<p>status works!</p>
+<div>
+    <button (click)="setTrue()">Ustaw status</button>
+    <button (click)="clearStatus()">Usuń status</button>
+  </div>
