--- a/lab_11/zad_02/src/app/data/data.component.html
+++ b/lab_11/zad_02/src/app/data/data.component.html
@@ -1,1 +1,10 @@
-<p>data works!</p>
+<div *ngIf="status; else redirectToStatus">
+    <!-- Zawartość dostępna tylko przy ustawionym statusie -->
+    <p>Zawartość dostępna tylko przy ustawionym statusie.</p>
+  </div>
+  <ng-template #redirectToStatus>
+    <!-- Przekierowanie na /set-status, gdy status nie jest ustawiony -->
+    <p>Przekierowanie na /set-status...</p>
+    <button (click)="redirectToStatusPage()">Przejdź do /set-status</button>
+  </ng-template>
+  
