--- a/projekt_egzaminacyjny/src/app/modules/home/pages/home/home.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/home/pages/home/home.component.html
@@ -1,1 +1,9 @@
-<app-header></app-header>
+
+<div class="wrapper">
+    <app-header></app-header>
+    <div class="content">
+<!-- other components -->
+    </div>
+    <app-footer></app-footer>
+  </div>
+  
