add grid in home to display all quizes

--- a/projekt_egzaminacyjny/src/app/modules/home/pages/home/home.component.scss
+++ b/projekt_egzaminacyjny/src/app/modules/home/pages/home/home.component.scss
@@ -5,9 +5,14 @@
   
     .content {
       flex: 1;
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+      margin-left: 3.5rem; 
+      margin-right: 3.5rem;
     }
   
     app-footer {
       margin-top: auto;
     }
   }
+  
