--- a/projekt_egzaminacyjny/src/app/modules/home/pages/home/home.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/home/pages/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="wrapper">
     <app-header></app-header>
     <div class="content">
-<!-- other components -->
+<app-display-all-quizes></app-display-all-quizes>
     </div>
     <app-footer></app-footer>
   </div>
