--- a/projekt_egzaminacyjny/src/app/modules/home/components/display-all-quizes/display-all-quizes.component.scss
+++ b/projekt_egzaminacyjny/src/app/modules/home/components/display-all-quizes/display-all-quizes.component.scss
@@ -12,6 +12,14 @@
       align-items: center;
       padding: 20px;
       text-align: center;
+      transition: transform 0.3s;
+
+
+  &:hover {
+    transform: scale(1.05); 
+    cursor: pointer;
+ 
+  }
   
       .quiz-image {
       width:30vh;
