--- a/projekt_egzaminacyjny/src/app/shared/components/header/header.component.html
+++ b/projekt_egzaminacyjny/src/app/shared/components/header/header.component.html
@@ -1,10 +1,8 @@
 <header class="app-header">
 
-    <div class="branding">
+    <div (click)="redirectToHome()" (keydown.enter)="redirectToHome()" tabindex="1" class="branding">
       <h1>QuizMaster</h1>
     </div>
-
- 
 
       <div class="search-container">
         <input pInputText placeholder="Search quizzes" class="p-inputtext p-mr-2">
