--- a/projekt_egzaminacyjny/src/app/shared/components/header/header.component.scss
+++ b/projekt_egzaminacyjny/src/app/shared/components/header/header.component.scss
@@ -7,8 +7,19 @@
   padding: 10px;
   margin: 0;
 
-  .branding h1 {
-    margin: 0;
+  .branding {
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: darken($primary_color, 10%);
+ 
+    }
+
+    h1 {
+      margin: 0;
+      padding: 10px;
+    }
   }
 
   .search-container {
