--- a/projekt_egzaminacyjny/src/app/modules/home/components/display-all-quizes/display-all-quizes.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/home/components/display-all-quizes/display-all-quizes.component.html
@@ -1,17 +1,18 @@
 <div class="quiz-grid">
-    <div class="quiz-card" *ngFor="let quiz of quizzes">
-    
-        <!-- hardcode the image for now -->
-        <div class="quiz-image">
-  
-        </div>
-        <div class="quiz-title">{{ quiz.title }}</div>
-        <div class="quiz-description">{{ quiz.description }}</div>
-        <div class="quiz-author">{{ quiz.author.username }}</div>
-        <div class="quiz-creation-date">{{ quiz.creationDate | date }}</div>
-        <div class="quiz-num-questions">{{ quiz.questions.length }} Questions</div>
-        <div class="quiz-likes">{{ quiz.likes }} Likes</div>
+  <div class="quiz-card" *ngFor="let quiz of quizzes" (click)="redirectToQuiz(quiz.id)"
+    (keydown.enter)="redirectToQuiz(quiz.id)" tabindex="0">
+
+    <!-- hardcode the image for now -->
+    <div class="quiz-image">
 
     </div>
+    <div class="quiz-title">{{ quiz.title }}</div>
+    <div class="quiz-description">{{ quiz.description }}</div>
+    <div class="quiz-author">{{ quiz.author.username }}</div>
+    <div class="quiz-creation-date">{{ quiz.creationDate | date }}</div>
+    <div class="quiz-num-questions">{{ quiz.questions.length }} Questions</div>
+    <div class="quiz-likes">{{ quiz.likes }} Likes</div>
+
+
   </div>
-  
+</div>
