--- a/projekt_egzaminacyjny/src/app/shared/components/header/header.component.html
+++ b/projekt_egzaminacyjny/src/app/shared/components/header/header.component.html
@@ -9,8 +9,8 @@
       </div>
 
       <div class="auth-actions">
-        <button pButton type="button" label="Sign In" class="p-button p-button-rounded p-mr-2">Sign in </button>
-        <button pButton type="button" label="Sign Up" class="p-button p-button-rounded">Sing up</button>
+        <button pButton type="button" label="Sign In" class="p-button  ">Sign in </button>
+        <button pButton type="button" label="Sign Up" class="p-button ">Sing up</button>
       </div>
 
 
