--- a/projekt_egzaminacyjny/src/app/modules/quiz/pages/quiz/quiz.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/quiz/pages/quiz/quiz.component.html
@@ -1,7 +1,7 @@
 <div>
     <app-header></app-header>
-    <div>
-        <h3>{{quiz.title}}</h3>
+    <div class="wrapper">
+        <h1>{{quiz.title}}</h1>
     </div>
 </div>
 
