--- a/projekt_egzaminacyjny/src/app/shared/components/header/header.component.scss
+++ b/projekt_egzaminacyjny/src/app/shared/components/header/header.component.scss
@@ -11,9 +11,10 @@
   .branding {
     cursor: pointer;
     transition: background-color 0.3s ease;
+    
 
     &:hover {
-      background-color: darken($primary_color, 10%);
+      background-color: lighten($primary_color, 13%);
  
     }
 
@@ -42,6 +43,15 @@
 
     .p-button {
       margin-left: 10px;
+      background-color: $secondary_color;
+      border: 1px solid $secondary_color;
+      border-radius: 20px; /* Adjust the border-radius as needed */
+      transition: border 0.3s ease;
+
+      &:hover {
+        border: 1px solid white;
+        box-shadow: 0 0 10px white; /* Add a white glowing border on hover */
+      }
     }
   }
 }
