--- a/projekt_egzaminacyjny/src/app/modules/quiz/pages/quiz/quiz.component.scss
+++ b/projekt_egzaminacyjny/src/app/modules/quiz/pages/quiz/quiz.component.scss
@@ -2,14 +2,40 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    height: 100vh;
-    // background-color: white;
-  
-  
+    justify-content: center; 
+    margin-bottom: 5rem;
+
   
     h1 {
-      font-size: 2rem;
+      font-size: rem;
 
+ 
     }
   }
+  
+  .wrapper-content {
+    width: 80%; 
+    max-width: 700px; /* Maximum width to avoid overly wide containers on larger screens */
+    text-align: left; 
+  }
+  
+  .question {
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .answers {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  label {
+    margin-left: 10px;
+  }
+  
+  input[type="radio"] {
+    margin-right: 5px;
+  }
+  
