--- a/projekt_egzaminacyjny/src/app/modules/quiz/pages/quiz/quiz.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/quiz/pages/quiz/quiz.component.html
@@ -1,12 +1,25 @@
 <div>
-    <app-header></app-header>
-    <div class="wrapper">
-        <h1>{{ quiz?.title }}</h1>
-        <div *ngFor="let question of questions" class="wrapper-content">
-          <app-quiz-question-container [question]="question"></app-quiz-question-container>
-        </div>
-      </div>
-      <app-footer></app-footer>
+  <app-header></app-header>
+  <div class="wrapper">
+    <h1>{{ quiz?.title }}</h1>
+    <div *ngFor="let question of questions" class="wrapper-content">
+      <app-quiz-question-container
+        [question]="question"
+        [submitted]="submitted"
+      ></app-quiz-question-container>
+    </div>
+    <div>
+    <button
+      pButton
+      type="button"
+      label="Submit"
+      class="p-button p-mt-2 submit"
+    (click)="submitAnswers()"
+    >Submit</button>
+    <button pButton type="button" label="Retry" class="p-button p-mt-2 retry" (click)="retryQuiz()">Retry</button>
+    </div>
+  </div>
+ 
+
+  <app-footer></app-footer>
 </div>
-
-
