create sinin and sinup components

--- a/projekt_egzaminacyjny/src/app/core/constants/colors.scss
+++ b/projekt_egzaminacyjny/src/app/core/constants/colors.scss
@@ -1,4 +1,7 @@
 $primary_color: #90BE6D;
+$primary_color_light: #c7deb5;
 $secondary_color: #EA9010;
 $border_color: #37371F;
 $image_color:#EAEFBD;
+$success_color:#6fbe74;
+$fail_color:#be746f;
