--- a/projekt_egzaminacyjny/src/app/core/pages/sing-in/sing-in.component.html
+++ b/projekt_egzaminacyjny/src/app/core/pages/sing-in/sing-in.component.html
@@ -1,1 +1,20 @@
-<p>sing-in works!</p>
+<div class="signin-container">
+    <h1>QuizMaster</h1>
+    <div class="card">
+      <h2>Sign In</h2>
+      <form>
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input id="username" type="text" pInputText class="form-control" />
+        </div>
+  
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input id="password" type="password" pPassword class="form-control" />
+        </div>
+  
+        <button pButton type="button" label="Sign In" class="p-mt-2 p-button p-button-success">Sign In</button>
+      </form>
+    </div>
+  </div>
+  
