--- a/projekt_egzaminacyjny/src/app/core/pages/sing-up/sing-up.component.html
+++ b/projekt_egzaminacyjny/src/app/core/pages/sing-up/sing-up.component.html
@@ -1,1 +1,29 @@
-<p>sing-up works!</p>
+<div class="signup-container">
+    <h1>QuizMaster</h1>
+    <div class="card">
+      <h2>Sign Up</h2>
+      <form>
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input id="username" type="text" pInputText class="form-control" />
+        </div>
+  
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input id="email" type="email" pInputText class="form-control" />
+        </div>
+  
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input id="password" type="password" pPassword class="form-control" />
+        </div>
+
+        <div class="form-group">
+          <label for="repeatPassword">Repeat Password</label>
+          <input id="repeatPassword" type="password" pPassword class="form-control" />
+        </div>
+  
+        <button pButton type="button" label="Sign Up" class="p-mt-2 p-button p-button-success">Sign Up</button>
+      </form>
+    </div>
+</div>
