add sing in/up routing, make branding reusable component

--- a/projekt_egzaminacyjny/src/app/core/pages/sing-up/sing-up.component.html
+++ b/projekt_egzaminacyjny/src/app/core/pages/sing-up/sing-up.component.html
@@ -1,5 +1,5 @@
 <div class="signup-container">
-    <h1>QuizMaster</h1>
+<app-branding></app-branding>
     <div class="card">
       <h2>Sign Up</h2>
       <form>
