--- a/projekt_egzaminacyjny/src/app/core/pages/sing-in/sing-in.component.html
+++ b/projekt_egzaminacyjny/src/app/core/pages/sing-in/sing-in.component.html
@@ -1,5 +1,5 @@
 <div class="signin-container">
-    <h1>QuizMaster</h1>
+<app-branding></app-branding>
     <div class="card">
       <h2>Sign In</h2>
       <form>
