--- a/projekt_egzaminacyjny/src/app/core/pages/sing-up/sing-up.component.html
+++ b/projekt_egzaminacyjny/src/app/core/pages/sing-up/sing-up.component.html
@@ -26,4 +26,5 @@
         <button pButton type="button" label="Sign Up" class="p-mt-2 p-button p-button-success">Sign Up</button>
       </form>
     </div>
+    <app-sing-in-button  class="custom-button" ></app-sing-in-button>
 </div>
