--- a/projekt_egzaminacyjny/src/app/modules/quiz/components/quiz-question-container/quiz-question-container.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/quiz/components/quiz-question-container/quiz-question-container.component.html
@@ -13,7 +13,7 @@
           [value]="answer"
           id="{{ 'answer_' + aIndex }}"
           name="{{ 'question_' + question.id }}"
-   
+        [disabled]="submitted"
         />
         <label for="{{ 'answer_' + aIndex }}">{{ answer.answer }}</label>
     </div>
