--- a/projekt_egzaminacyjny/src/app/shared/components/header/header.component.html
+++ b/projekt_egzaminacyjny/src/app/shared/components/header/header.component.html
@@ -1,18 +1,17 @@
 <header class="app-header">
 
-    <div (click)="redirectTo('/home')" (keydown.enter)="redirectTo('/home')" tabindex="1" class="branding">
-      <h1>QuizMaster</h1>
-    </div>
+  <div (click)="redirectTo('/home')" (keydown.enter)="redirectTo('/home')" tabindex="1" class="branding">
+    <h1>QuizMaster</h1>
+  </div>
 
-      <div class="search-container">
-        <input pInputText placeholder="Search quizzes" class="p-inputtext p-mr-2">
-      </div>
+  <div class="search-container">
+    <input pInputText placeholder="Search quizzes" class="p-inputtext p-mr-2">
+  </div>
 
-      <div class="auth-actions">
-        <button  (click)="redirectTo('/sing-in')" (keydown.enter)="redirectTo('/sing-in')" tabindex="1" pButton type="button" label="Sign In" class="p-button  ">Sign in </button>
-        <button  (click)="redirectTo('/sing-up')" (keydown.enter)="redirectTo('/sing-up')" tabindex="1" pButton type="button" label="Sign Up" class="p-button ">Sing up</button>
-      </div>
+  <div class="auth-actions">
+    <app-sing-in-button></app-sing-in-button>
+    <app-sing-up-button></app-sing-up-button>
+  </div>
 
 
-  </header>
-  
+</header>
