--- a/projekt_egzaminacyjny/src/app/shared/components/sing-up-button/sing-up-button.component.html
+++ b/projekt_egzaminacyjny/src/app/shared/components/sing-up-button/sing-up-button.component.html
@@ -1,1 +1,1 @@
-<button  (click)="redirectTo('/sing-up')" (keydown.enter)="redirectTo('/sing-up')" tabindex="1" pButton type="button" label="Sign Up" class="p-button ">Sing up</button>
+<button (click)="redirectTo('/sing-up')" (keydown.enter)="redirectTo('/sing-up')" tabindex="1" pButton type="button" label="Sign Up" class="p-button p-button-signup">Sign Up</button>
