--- a/projekt_egzaminacyjny/src/app/shared/components/sing-in-button/sing-in-button.component.scss
+++ b/projekt_egzaminacyjny/src/app/shared/components/sing-in-button/sing-in-button.component.scss
@@ -11,3 +11,11 @@
       box-shadow: 0 0 10px white; /* Add a white glowing border on hover */
     }
   }
+
+  @media screen and (max-width: 768px) {
+    .p-button {
+        padding: 8px 16px;
+        font-size: 14px; 
+        margin-left: 0;
+    }
+}
