fix id validation

--- a/zadanie_projektowe_03/src/app/details/details.component.html
+++ b/zadanie_projektowe_03/src/app/details/details.component.html
@@ -1,6 +1,6 @@
     <div  class="person-container">
         <a [routerLink]="['/details', person?.id, 'edit']">Edit</a>
-        <button (click)="toggleUserRole()">Toggle User Role</button>
+        <!-- <button (click)="toggleUserRole()">Toggle User Role</button> -->
       <span style="font-weight: bold">Name: </span>{{ person?.name }}
     </div>
     <div>
