add quiz category

--- a/projekt_egzaminacyjny/src/app/modules/home/components/display-all-quizes/display-all-quizes.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/home/components/display-all-quizes/display-all-quizes.component.html
@@ -12,7 +12,7 @@
     <div class="quiz-creation-date">{{ quiz.creationDate | date }}</div>
     <div class="quiz-num-questions">{{ quiz.questions.length }} Questions</div>
     <div class="quiz-likes">{{ quiz.likes }} Likes</div>
-
+    <div>{{quiz.category}}</div>
 
   </div>
 </div>
