move components from core to shared

--- a/projekt_egzaminacyjny/src/app/core/constants/colors.scss
+++ b/projekt_egzaminacyjny/src/app/core/constants/colors.scss
@@ -1,4 +1,5 @@
 $primary_color: #90BE6D;
+$hover_primary_color:lighten($primary_color, 13%);
 $primary_color_light: #c7deb5;
 $secondary_color: #EA9010;
 $border_color: #37371F;
