--- a/projekt_egzaminacyjny/src/app/shared/components/header/header.component.scss
+++ b/projekt_egzaminacyjny/src/app/shared/components/header/header.component.scss
@@ -14,7 +14,7 @@
     
 
     &:hover {
-      background-color: lighten($primary_color, 13%);
+      background-color: $hover_primary_color;
  
     }
 
