--- a/projekt_egzaminacyjny/src/app/shared/components/menu/menu.component.scss
+++ b/projekt_egzaminacyjny/src/app/shared/components/menu/menu.component.scss
@@ -1,24 +1,108 @@
 @import "../../../core/constants/colors.scss";
-.menu-button {
-    background-color: $primary_color;
-    color: #ffffff; 
-    padding: 10px 20px; 
-    border: none;
-    border-radius: 5px; 
-    cursor: pointer; 
-    transition: $primary_color 0.3s ease; 
-    font-size: 16px; 
-    font-weight: bold; 
-  }
-  
-  .menu-button:hover {
-    background-color: $hover_primary_color; 
-  }
-  
-  @media screen and (max-width: 768px) {
-    .menu-button {
-      padding: 8px 16px; 
-      font-size: 14px; 
+
+.app-header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: $primary_color;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 2rem;
+
+  .branding {
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    padding: 10px;
+
+    &:hover {
+      background-color: $hover_primary_color;
+    }
+
+    h1 {
+      margin: 0;
+      padding: 0;
     }
   }
-  
+
+  .search-container {
+    margin-left: 10px;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .p-inputtext {
+      width: 80%;
+    }
+  }
+
+  .auth-actions {
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+  }
+}
+
+.menu-button {
+  background-color: $primary_color;
+  color: black;
+  padding: 10px 20px;
+  line-height: 1;
+  border: none;
+  cursor: pointer;
+  transition: $primary_color 0.3s ease;
+  font-size: 16px;
+  font-weight: bold;
+  padding-right: 60px;
+
+  &:hover {
+    background-color: $hover_primary_color;
+  }
+
+  @media screen and (max-width: 768px) {
+    padding: 8px 16px;
+    font-size: 14px;
+  }
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  border: 1px solid $primary_color;
+  margin-right: 10px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: max-content;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  right: 0;
+
+  .logout {
+   color:red;
+   font-weight: medium;
+
+    &:hover {
+      background-color: #f1f1f1;
+    }
+  }
+
+  a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+
+    &:hover {
+      background-color: #f1f1f1;
+    }
+  }
+
+  .dropdown:hover & {
+    display: block;
+  }
+}
