init create quiz page

--- a/projekt_egzaminacyjny/src/app/modules/home/pages/home/home.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/home/pages/home/home.component.html
@@ -1,7 +1,10 @@
+<!-- eslint-disable @angular-eslint/template/elements-content -->
 <div class="wrapper">
     <app-header></app-header>
 
     <div class="content">
+      <app-contols-panel></app-contols-panel>
+
         <app-display-all-quizes></app-display-all-quizes>
     </div>
     <app-footer></app-footer>
