init create quiz component

--- a/projekt_egzaminacyjny/src/app/modules/quiz/pages/create-quiz/create-quiz.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/quiz/pages/create-quiz/create-quiz.component.html
@@ -1,1 +1,6 @@
-<p>create-quiz works!</p>
+<div>
+    <app-header></app-header>
+    <div class="wrapper">
+       <div>Yeah creat new quiz</div>
+    <app-footer></app-footer>
+</div>
