--- a/projekt_egzaminacyjny/src/app/modules/home/pages/home/home.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/home/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <app-header></app-header>
 
     <div class="content">
-      <app-contols-panel></app-contols-panel>
+        <app-controls-panel  *ngIf="isAuthentiticated()"></app-controls-panel>
 
         <app-display-all-quizes></app-display-all-quizes>
     </div>
