add form plus custom validator for adding new quiz

--- a/projekt_egzaminacyjny/src/app/modules/quiz/pages/create-quiz/create-quiz.component.html
+++ b/projekt_egzaminacyjny/src/app/modules/quiz/pages/create-quiz/create-quiz.component.html
@@ -1,6 +1,6 @@
 <div>
     <app-header></app-header>
     <div class="wrapper">
-       <div>Yeah creat new quiz</div>
+       <app-create-quiz-form></app-create-quiz-form>
     <app-footer></app-footer>
 </div>
